# cpp_template_conan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  requirements.txt
docs/: CMakeLists.txt  mainpage.md
include/sample_lib/: result.h  sample_lib.h  types.h
profiles/: Debug_64Bit_clang_mac  Debug_64Bit_clang_win  Release_64Bit_clang  linux-latest-clang-debug
sample_app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/sample_lib/: sample_lib.cpp
src/sample_lib/internal/: internal_class.h
tests/: CMakeLists.txt  test_basic.cpp  test_sample_lib.cpp
tests/sample_lib/: test_sample_lib.cpp
tests/sample_lib/internal/: internal_class_tests.cpp
venv_conan/: pyvenv.cfg
